# cutom-git-hook

./: .pre-commit-hooks.yaml  README.md  no_commit_to_master.sh  pyproject.toml
